--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+#confugire data source here
+# MySQL
 
+spring.datasource.url=jdbc:mysql://localhost:3306/lidl-test-db
+spring.datasource.username=lidl
+spring.datasource.password=New_password_1
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
