added new table Group and made bonds with Student

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,10 @@ spring.datasource.username=lidl
 spring.datasource.password=New_password_1
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+#hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.show_sql=true
+spring.jpa.hibernate.ddl-auto=create
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=trace
+
